# MUSE-local-v2

./: .gitignore  CLAUDE.md  README.md  Write a Python function that calculates fibonacci numbers and save it to fibonacci.py  export_data.py  import_data.py  pyproject.toml  reset_data.bat  reset_data.py  reset_data.sh  start.bat  start.sh  stop.bat
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app-load.spec.ts  chat.spec.ts  helpers.ts  navigation.spec.ts  responsive.spec.ts  settings.spec.ts  setup-flow.spec.ts  sidebar.spec.ts
frontend/src/: App.css  App.tsx  main.tsx
sdk/: pyproject.toml
sdk/muse_sdk/: __init__.py  autonomous.py  context.py  errors.py  files.py  http.py  ipc_client.py  llm.py  memory.py  skill.py  task.py  user.py
skills/calendar/: skill.py  (+1 more)
tests/: TEST_PLAN.md  conftest.py  test_agent.py  test_agent_integration.py  test_compaction.py  test_comprehensive.py  test_context_assembly.py  test_debug_tracer.py  test_demotion.py  test_full_potential.py  test_intent_classifier.py  test_iteration.py  test_local_model_capabilities.py  test_mcp_lifecycle.py  test_mcp_servers.py  test_memory_encryption.py  test_message_bus.py  test_model_router.py  test_permission_manager.py  test_plan_executor.py  test_planner_hint.py  test_promotion.py  test_provider_registry.py  test_scheduler.py  test_service_registry.py  test_session_store.py  test_skill_dispatcher.py  test_skill_executor.py  test_skill_loader.py  test_skill_sandbox.py  test_task_manager.py  test_trust_budget.py  test_webpage_reader.py
(+144 files in other folders)
