[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muse"
version = "0.1.0"
description = "A secure, consumer-grade autonomous agent platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "aiohttp>=3.10.0",
    "aiosqlite>=0.20.0",
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.40.0",
    "keyring>=25.0.0",
    "cryptography>=43.0.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
    "psutil>=6.0.0",
    "tzdata>=2024.1",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
screen = [
    "mss>=9.0.0",
    "Pillow>=10.0.0",
    "pyautogui>=0.9.54",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[project.scripts]
muse = "muse.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/muse"]

[tool.ruff]
target-version = "py310"
line-length = 100
